debian-installer-utils (0.57) UNRELEASED; urgency=low

  * Bastian Blank
    - Setup new environment. (closes: #219629)
    - Ask main-menu for restart/quit. Needs main-menu 0.070.
  * Colin Watson
    - Add search-path program to attempt to discourage fragile code of the
      form 'if [ -x /hardcoded/path/to/executable ]'.

 -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 13:08:32 +0200

debian-installer-utils (0.56) unstable; urgency=low

  * Updated translations: 
    - Basque (eu.po) by Piarres Beobide Egaña
    - Italian (it.po) by Stefano Melchior
    - Polish (pl.po) by Bartosz Fenski
    - Russian (ru.po) by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Tue, 25 May 2004 12:43:47 -0300

debian-installer-utils (0.55) unstable; urgency=low

  * Christian Perrier
    - Fixed ellipsis typography

 -- Christian Perrier <bubulle@debian.org>  Thu, 13 May 2004 16:05:13 +0200

debian-installer-utils (0.54) unstable; urgency=low

  * Joey Hess
    - In di-utils-shell, ignore the exit status of the shell;
      some commands came make the shell return nonzero, and that should not be
      presented as a menu item failing.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Vietnamese (vi.po) by Vu Quang Trung

 -- Joey Hess <joeyh@debian.org>  Fri, 23 Apr 2004 13:23:09 -0400

debian-installer-utils (0.53) unstable; urgency=low

  * Updated translations: 
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Portuguese (pt.po) by Miguel Figueiredo
    - Turkish (tr.po) by Osman Yüksel
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Tue, 20 Apr 2004 11:14:30 -0400

debian-installer-utils (0.52) unstable; urgency=low

  * Updated translations: 