@@ -3,6 +3,7 @@ debian-installer-utils (0.57) UNRELEASED; urgency=low
   * Bastian Blank
     - Setup new environment. (closes: #219629)
     - Ask main-menu for restart/quit. Needs main-menu 0.070.
+    - Restore stderr. Needs cdebconf 0.68.
   * Colin Watson
     - Add search-path program to attempt to discourage fragile code of the
       form 'if [ -x /hardcoded/path/to/executable ]'.
